--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@material-ui/core": "^4.4.3",
     "@material-ui/icons": "^4.4.3",
+    "moment": "^2.24.0",
     "react": "^16.9.0",
     "react-bottom-scroll-listener": "^3.0.0",
     "react-dom": "^16.9.0",
