--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-bottom-scroll-listener": "^3.0.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
-    "react-scripts": "3.1.2",
+    "react-scripts": "^3.4.3",
     "redux": "^4.0.4"
   },
   "scripts": {
